# soltania-python-persistence-api

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/soltania_persistence/: __init__.py  config.py
src/soltania_persistence/app/: models.py  repositories.py
src/soltania_persistence/core/: domain.py  interfaces.py
src/soltania_persistence/examples/app/: main.py
src/soltania_persistence/examples/learning_paths/: main.py  models.py
src/soltania_persistence/examples/learning_paths/data/: curriculum.json
src/soltania_persistence/examples/learning_paths/models/: __init__.py  edges.py  nodes.py
src/soltania_persistence/examples/learning_paths/repositories/: curriculum_repository.py
src/soltania_persistence/examples/learning_paths/services/: importer.py
src/soltania_persistence/examples/metro_network/: importer.py  main.py  repositories.py  run_path.py
src/soltania_persistence/examples/metro_network/data/: lines.json
src/soltania_persistence/examples/metro_network/models/: __init__.py  edges.py  models.py  nodes.py
src/soltania_persistence/examples/metro_network/repositories/: metro_repository.py
src/soltania_persistence/examples/metro_network/services/: importer.py
src/soltania_persistence/provider/tinkerpop/: manager.py
tests/: test_basic.py
tests/integration/: test_gremlin.py
tests/unit/: test_models.py  test_repository.py
